Fix scrollbar in landing page (#609)
* Fix scrollbar in landing page

* Revert "Fix scrollbar in landing page"

This reverts commit 46c1a8f45cd4f308c84a15db2e57bc284515bbbe.

* fix: add back the global CSS to hide scrollbars by default

and add display: block on scrollbars CSS when desired

---------

--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -17,3 +17,7 @@ body {
   width: 360px;
   height: 600px;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
